# gamenet

./: .gitignore  CMakeLists.txt  README.md
src/client/: CMakeLists.txt
src/client/src/: libimpl.cpp  main.cpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
src/shared/: implementation.h
src/shared/common/: common.cpp  common.hpp  flag_list.hpp  messages.hpp  permissions.hpp  thread.hpp
src/shared/common/exception/: exception.cpp  exception.hpp
src/shared/common/utils/: flag.cpp  flag.hpp
src/shared/tcp/: tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
templ/: CMakeLists.txt
