cmake_minimum_required(VERSION 3.1)
project(gamenet)

set(SOURCE_FOLDER "src" CACHE STRING "Path to source.")

set(BUILD_SERVER TRUE CACHE BOOL "Build the server app.")

set(BUILD_CLIENT TRUE CACHE BOOL "Build a client app.")

include_directories(${SOURCE_FOLDER}/shared/)

file(GLOB_RECURSE SHARED_CPP_SOURCES ABSOLUTE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER}/shared/*.cpp")

file(GLOB_RECURSE SHARED_CPP_HEADER ABSOLUTE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER}/shared/*.hpp")

file(GLOB_RECURSE SHARED_C_SOURCES ABSOLUTE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER}/shared/*.c")

file(GLOB_RECURSE SHARED_C_HEADER ABSOLUTE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER}/shared/*.h")



set(SHARED_SOURCES ${SHARED_CPP_SOURCES} ${SHARED_C_SOURCES})
set(SHARED_HEADERS ${SHARED_CPP_SOURCES} ${SHARED_C_HEADER})
set(SHARED_ITEMS ${SHARED_SOURCES} ${SHARED_HEADERS})

if(BUILD_SERVER)
	add_subdirectory("${SOURCE_FOLDER}/server/")
endif()

if(BUILD_CLIENT)
	add_subdirectory("${SOURCE_FOLDER}/client/")
endif()
