cmake_minimum_required(VERSION 3.1)
project(client)

include_directories(${PROJECT_SOURCE_DIR}/include/)

set(CLIENT_EXEC_NAME "gnc" CACHE STRING "The name of the executable.")

set(SOURCE_FOLDER_CLIENT "src" CACHE STRING "Path to source.")

file(GLOB_RECURSE CC_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.c")
file(GLOB_RECURSE CC_HEADERS RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.h")

file(GLOB_RECURSE CCPP_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.cpp")
file(GLOB_RECURSE CCPP_HEADERS RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.hpp")

file(GLOB_RECURSE CCXX_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.cxx")
file(GLOB_RECURSE CCXX_HEADERS RELATIVE ${PROJECT_SOURCE_DIR} "${SOURCE_FOLDER_CLIENT}/*.hxx")


set(CCHEADERS ${CC_HEADERS} ${CCPP_HEADERS} ${CCXX_HEADERS})
set(CCSOURCES ${CC_SOURCES} ${CCPP_SOURCES} ${CCXX_SOURCES})


add_executable(client_app
	$<TARGET_OBJECTS:sharedlibobj>
	${CCSOURCES} 
	${CCHEADERS}
)

target_compile_definitions(client_app PRIVATE
                                $<$<CONFIG:Debug>:_DEBUG>
                            )

set_target_properties(client_app PROPERTIES OUTPUT_NAME "${CLIENT_EXEC_NAME}")
set_target_properties(client_app PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")
